# RetDec-Decompiler

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .env.taskmaster.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  modified-license.md  retdec_gui_plan.md  vcpkg.json
cmake/superbuild/: CMakeLists.txt  CMakePresets.json
examples/decompiler_plugin/: CMakeLists.txt  README.md  plugin_load_probe.cpp  post_process_output.py
src/: CMakeLists.txt
src/algo_recover/: CMakeLists.txt  accumulate_detect.cpp  algo_detector.cpp  find_detect.cpp  foreach_detect.cpp  iterator_recover.cpp  partition_detect.cpp  transform_detect.cpp
src/alias_analysis/: CMakeLists.txt  escape_analysis.cpp  stack_alias.cpp  steensgaard.cpp
src/ar-extractor/: archive_wrapper.cpp  detection.cpp  doxygen.h
src/ar-extractortool/: ar_extractor.cpp
src/bc_module/: CMakeLists.txt  bc_cfg.cpp  bc_instr.cpp  bc_json.cpp  bc_module.cpp  bc_type.cpp
src/bin2llvmir/: CMakeLists.txt  doxygen.h
src/bin2pat/: bin2pat.cpp
src/call_conv/: CMakeLists.txt  call_conv_pass.cpp  caller_cleanup.cpp  reg_arg_analysis.cpp  return_value.cpp  variadic_detect.cpp
src/capstone2llvmir/: CMakeLists.txt  capstone2llvmir.cpp  capstone2llvmir_impl.cpp  capstone2llvmir_impl.h  capstone_utils.h  exceptions.cpp  llvmir_utils.cpp  llvmir_utils.h
src/capstone2llvmirtool/: capstone2llvmir.cpp
src/cfg/: CMakeLists.txt  cfg.cpp
src/cfg_structure/: CMakeLists.txt  compiler_structurer.cpp  irreducibility.cpp  loop_recovery.cpp  post_domtree.cpp  sese_decomp.cpp
src/cil_reconstruct/: CMakeLists.txt  cil_patterns.cpp  cil_reconstructor.cpp  cil_stack_sim.cpp  cil_var_recovery.cpp
src/cli_parser/: CMakeLists.txt  cil_lifter.cpp  cli_heaps.cpp  cli_reader.cpp  cli_sig.cpp  cli_tables.cpp  pe_reader.cpp
src/code_data/: CMakeLists.txt  code_data_classifier.cpp
src/codegen/: CMakeLists.txt  cond_normalise.cpp  emitter.cpp  expr_coalesce.cpp  goto_elim.cpp  loop_form.cpp  pointer_syntax.cpp
src/common/: address.cpp  architecture.cpp  basic_block.cpp  calling_convention.cpp  class.cpp  file_format.cpp  file_type.cpp  function.cpp  language.cpp  object.cpp  pattern.cpp  storage.cpp  tool_info.cpp  type.cpp  vtable.cpp
src/compiler_abi/: CMakeLists.txt  abi_descriptor.cpp
src/compiler_detect/: CMakeLists.txt  compiler_fingerprinter.cpp
src/concurrency_detect/: CMakeLists.txt  concurrency_detect.cpp
src/config/: config.cpp  parameters.cpp
src/container_detect/: CMakeLists.txt  container_detector.cpp  list_detect.cpp  map_detect.cpp  string_detect.cpp  unordered_detect.cpp  vector_detect.cpp
src/cpdetect/: cpdetect.cpp  cptypes.cpp  doxygen.h  errors.cpp  search.cpp  signature.cpp
src/crypto_detect/: CMakeLists.txt  aes_detect.cpp  chacha_detect.cpp  crypto_detector.cpp  hmac_detect.cpp  rc4_detect.cpp  rsa_detect.cpp  sha_detect.cpp
src/csharp_emitter/: CMakeLists.txt  cs_expr_emitter.cpp  cs_file_emitter.cpp  cs_stmt_emitter.cpp  cs_type_emitter.cpp  cs_writer.cpp
src/ctypes/: annotation.cpp  annotation_in.cpp  annotation_inout.cpp  annotation_optional.cpp  annotation_out.cpp  array_type.cpp  call_convention.cpp  composite_type.cpp  context.cpp  doxygen.h  enum_type.cpp  floating_point_type.cpp  function.cpp  function_declaration.cpp  function_type.cpp  header_file.cpp  integral_type.cpp  member.cpp  module.cpp  named_type.cpp  parameter.cpp  pointer_type.cpp  reference_type.cpp  struct_type.cpp  type.cpp  typedefed_type.cpp  union_type.cpp  unknown_type.cpp  visit_all_visitor.cpp  visitor.cpp  void_type.cpp
src/ctypesparser/: ctypes_parser.cpp  doxygen.h  json_ctypes_parser.cpp  type_config.cpp
src/cuda_accel/: CMakeLists.txt  cuda_buffer_pool.cpp  cuda_context.cpp  cuda_disassembler.cu  cuda_egraph_simplifier.cu  cuda_profiler.cpp  cuda_semantic_hasher.cu  cuda_steensgaard.cu  cuda_type_inferencer.cu
src/cxx_backend/: CMakeLists.txt  cxx_ast.cpp  cxx_emitter.cpp  cxx_lifter.cpp
src/dce/: CMakeLists.txt  abi_artifact_marker.cpp  dce_pass.cpp  dead_propagation.cpp  live_root_collector.cpp  unreachable_elim.cpp
src/debug_info/: CMakeLists.txt  debug_info.cpp  dwarf_extractor.cpp  pdb_extractor.cpp
src/debugformat/: debugformat.cpp  dwarf.cpp  pdb.cpp
src/demangler/: ast_ctypes_parser.cpp  borland_ast_ctypes_parser.cpp  borland_ast_parser.cpp  borland_demangler.cpp  context.cpp  demangler_base.cpp  itanium_ast_ctypes_parser.cpp  itanium_demangler_adapter.cpp  microsoft_demangler_adapter.cpp  ms_ast_ctypes_parser.cpp
src/demanglertool/: demangler.cpp
src/dex_parser/: CMakeLists.txt  dex_apk_reader.cpp  dex_class_parser.cpp  dex_header.cpp  dex_lifter.cpp
src/eh_reconstruct/: CMakeLists.txt  arm_ehabi.cpp  borland_eh.cpp  dmc_eh.cpp  eh_reconstruct.cpp  itanium_eh.cpp  lsda_parser.cpp  lsda_parser.h  msvc_eh.cpp  symbian_eh.cpp  watcom_eh.cpp
src/experimental/: CMakeLists.txt  pipeline_stub_anchors.cpp
src/fileformat/: CMakeLists.txt  doxygen.h  format_factory.cpp
src/fileinfo/: doxygen.h  fileinfo.cpp
src/fsharp_emitter/: CMakeLists.txt  fs_file_emitter.cpp  fs_type_emitter.cpp  fs_writer.cpp
src/func_boundary/: CMakeLists.txt  func_boundary.cpp
src/getsig/: doxygen.h  getsig.cpp
src/gui/: CMakeLists.txt  artifact_loader.cpp  batch_decompile_dialog.cpp  batch_decompile_queue.cpp  cli_tool_paths.cpp  decompiler_launch.cpp  export_bundle.cpp  install-windeployqt-gui.cmake.in  launch_options.cpp  main.cpp  mainwindow.cpp  project_file.cpp  theme.cpp  zip_writer.cpp
src/idiom_reconstruct/: CMakeLists.txt  abs_recovery.cpp  bit_idioms.cpp  division_recovery.cpp  idiom_reconstruct.cpp  modulo_recovery.cpp  simd_memcpy.cpp
src/idr2pat/: idr2pat.cpp
src/ipa/: CMakeLists.txt  call_graph.cpp  function_summary.cpp  global_typing.cpp  inline_candidate.cpp  ipa_pass.cpp  ipa_propagation.cpp
src/java_emitter/: CMakeLists.txt  java_class_emitter.cpp  java_expr_emitter.cpp  java_file_emitter.cpp  (+2 more)
src/rtti/: rtti.cpp  (+7 more)
tests/: CMakeLists.txt
(+2785 files in other folders)
