cond_add_subdirectory(ar-extractor RETDEC_ENABLE_AR_EXTRACTOR)
cond_add_subdirectory(ar-extractortool RETDEC_ENABLE_AR_EXTRACTORTOOL)
cond_add_subdirectory(bin2llvmir RETDEC_ENABLE_BIN2LLVMIR)
cond_add_subdirectory(bin2pat RETDEC_ENABLE_BIN2PAT)
cond_add_subdirectory(capstone2llvmir RETDEC_ENABLE_CAPSTONE2LLVMIR)
cond_add_subdirectory(capstone2llvmirtool RETDEC_ENABLE_CAPSTONE2LLVMIRTOOL)
cond_add_subdirectory(common RETDEC_ENABLE_COMMON)
cond_add_subdirectory(config RETDEC_ENABLE_CONFIG)
cond_add_subdirectory(cpdetect RETDEC_ENABLE_CPDETECT)
cond_add_subdirectory(ctypes RETDEC_ENABLE_CTYPES)
cond_add_subdirectory(ctypesparser RETDEC_ENABLE_CTYPESPARSER)
cond_add_subdirectory(debugformat RETDEC_ENABLE_DEBUGFORMAT)
cond_add_subdirectory(demangler RETDEC_ENABLE_DEMANGLER)
cond_add_subdirectory(demanglertool RETDEC_ENABLE_DEMANGLERTOOL)
cond_add_subdirectory(fileformat RETDEC_ENABLE_FILEFORMAT)
cond_add_subdirectory(fileinfo RETDEC_ENABLE_FILEINFO)
cond_add_subdirectory(getsig RETDEC_ENABLE_GETSIG)
cond_add_subdirectory(idr2pat RETDEC_ENABLE_IDR2PAT)
cond_add_subdirectory(llvmir-emul RETDEC_ENABLE_LLVMIR_EMUL)
cond_add_subdirectory(llvmir2hll RETDEC_ENABLE_LLVMIR2HLL)
cond_add_subdirectory(loader RETDEC_ENABLE_LOADER)
cond_add_subdirectory(macho-extractor RETDEC_ENABLE_MACHO_EXTRACTOR)
cond_add_subdirectory(macho-extractortool RETDEC_ENABLE_MACHO_EXTRACTORTOOL)
cond_add_subdirectory(pat2yara RETDEC_ENABLE_PAT2YARA)
cond_add_subdirectory(patterngen RETDEC_ENABLE_PATTERNGEN)
cond_add_subdirectory(pdbparser RETDEC_ENABLE_PDBPARSER)
cond_add_subdirectory(pelib RETDEC_ENABLE_PELIB)
cond_add_subdirectory(retdec RETDEC_ENABLE_RETDEC)
cond_add_subdirectory(retdec-decompiler RETDEC_ENABLE_RETDEC_DECOMPILER)
cond_add_subdirectory(retdectool RETDEC_ENABLE_RETDECTOOL)
cond_add_subdirectory(rtti-finder RETDEC_ENABLE_RTTI_FINDER)
cond_add_subdirectory(serdes RETDEC_ENABLE_SERDES)
cond_add_subdirectory(stacofin RETDEC_ENABLE_STACOFIN)
cond_add_subdirectory(stacofintool RETDEC_ENABLE_STACOFINTOOL)
cond_add_subdirectory(unpacker RETDEC_ENABLE_UNPACKER)
cond_add_subdirectory(unpackertool RETDEC_ENABLE_UNPACKERTOOL)
cond_add_subdirectory(utils RETDEC_ENABLE_UTILS)
add_subdirectory(cuda_accel)
add_subdirectory(packer)
add_subdirectory(mini_emu)
add_subdirectory(compiler_detect)
add_subdirectory(loader_sim)
add_subdirectory(code_data)
add_subdirectory(sem_decoder)
add_subdirectory(func_boundary)
add_subdirectory(cfg)
add_subdirectory(debug_info)
add_subdirectory(rtti)
add_subdirectory(compiler_abi)
add_subdirectory(type_seed)
add_subdirectory(idiom_reconstruct)
add_subdirectory(string_detect)
add_subdirectory(eh_reconstruct)
add_subdirectory(ssa)
add_subdirectory(var_recovery)
add_subdirectory(alias_analysis)
add_subdirectory(type_inference)
add_subdirectory(cfg_structure)
add_subdirectory(call_conv)
add_subdirectory(dce)
add_subdirectory(ipa)
add_subdirectory(codegen)
add_subdirectory(sort_detect)
add_subdirectory(container_detect)
add_subdirectory(algo_recover)
add_subdirectory(pattern_detect)
add_subdirectory(crypto_detect)
add_subdirectory(bc_module)
add_subdirectory(jvm_parser)
add_subdirectory(jvm_reconstruct)
add_subdirectory(java_emitter)
add_subdirectory(kotlin_emitter)
add_subdirectory(cli_parser)
add_subdirectory(cil_reconstruct)
add_subdirectory(csharp_emitter)
add_subdirectory(pyc_parser)
add_subdirectory(py_reconstruct)
add_subdirectory(py_emitter)
add_subdirectory(fsharp_emitter)
add_subdirectory(vbnet_emitter)
add_subdirectory(wasm_parser)
add_subdirectory(lua_parser)
add_subdirectory(cxx_backend)
add_subdirectory(dex_parser)
add_subdirectory(qwen3)
add_subdirectory(qwen3_runner)
add_subdirectory(serial_detect)
add_subdirectory(concurrency_detect)
add_subdirectory(ptx_decompile)
add_subdirectory(module_cluster)
add_subdirectory(profiling)
add_subdirectory(testing)

# GUI — full presets set RETDEC_REQUIRE_QT6=ON (Qt6 required); otherwise Qt is optional.
if(RETDEC_REQUIRE_QT6)
	find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Test)
	find_package(Qt6 QUIET OPTIONAL_COMPONENTS Svg)
	add_subdirectory(gui)
	message(STATUS "RetDec GUI: Qt6 required — building retdec-gui")
else()
	find_package(Qt6 QUIET COMPONENTS Core Gui Widgets Test)
	if(Qt6_FOUND AND TARGET Qt6::Widgets AND TARGET Qt6::Core)
		find_package(Qt6 QUIET OPTIONAL_COMPONENTS Svg)
		add_subdirectory(gui)
		message(STATUS "RetDec GUI: Qt6 found — building retdec-gui")
	else()
		message(STATUS "RetDec GUI: Qt6 not found — skipping retdec-gui (set RETDEC_REQUIRE_QT6=ON to require Qt)")
	endif()
endif()

cond_add_subdirectory(yaracpp RETDEC_ENABLE_YARACPP)

if(RETDEC_ENABLE_EXPERIMENTAL_SCAFFOLD)
	add_subdirectory(experimental)
endif()
