
cond_add_subdirectory(common RETDEC_ENABLE_COMMON_TESTS)
cond_add_subdirectory(bin2llvmir RETDEC_ENABLE_BIN2LLVMIR_TESTS)
cond_add_subdirectory(capstone2llvmir RETDEC_ENABLE_CAPSTONE2LLVMIR_TESTS)
cond_add_subdirectory(config RETDEC_ENABLE_CONFIG_TESTS)
cond_add_subdirectory(cpdetect RETDEC_ENABLE_CPDETECT_TESTS)
cond_add_subdirectory(ctypes RETDEC_ENABLE_CTYPES_TESTS)
cond_add_subdirectory(ctypesparser RETDEC_ENABLE_CTYPESPARSER_TESTS)
cond_add_subdirectory(demangler RETDEC_ENABLE_DEMANGLER_TESTS)
cond_add_subdirectory(fileformat RETDEC_ENABLE_FILEFORMAT_TESTS)
cond_add_subdirectory(llvmir-emul RETDEC_ENABLE_LLVMIR_EMUL_TESTS)
cond_add_subdirectory(llvmir2hll RETDEC_ENABLE_LLVMIR2HLL_TESTS)
cond_add_subdirectory(loader RETDEC_ENABLE_LOADER_TESTS)
cond_add_subdirectory(serdes RETDEC_ENABLE_SERDES_TESTS)
cond_add_subdirectory(unpacker RETDEC_ENABLE_UNPACKER_TESTS)
cond_add_subdirectory(utils RETDEC_ENABLE_UTILS_TESTS)
if(RETDEC_HAS_CUDA)
	add_subdirectory(cuda_accel)
endif()
add_subdirectory(packer)
add_subdirectory(mini_emu)
add_subdirectory(compiler_detect)
add_subdirectory(loader_sim)
add_subdirectory(code_data)
add_subdirectory(sem_decoder)
add_subdirectory(func_boundary)
add_subdirectory(cfg)
add_subdirectory(debug_info)
add_subdirectory(rtti)
add_subdirectory(compiler_abi)
add_subdirectory(type_seed)
add_subdirectory(idiom_reconstruct)
add_subdirectory(string_detect)
add_subdirectory(eh_reconstruct)
add_subdirectory(ssa)
add_subdirectory(var_recovery)
add_subdirectory(alias_analysis)
add_subdirectory(type_inference)
add_subdirectory(cfg_structure)
add_subdirectory(call_conv)
add_subdirectory(dce)
add_subdirectory(ipa)
add_subdirectory(codegen)
add_subdirectory(sort_detect)
add_subdirectory(container_detect)
add_subdirectory(algo_recover)
add_subdirectory(pattern_detect)
add_subdirectory(crypto_detect)
add_subdirectory(bc_module)
add_subdirectory(jvm_parser)
add_subdirectory(jvm_reconstruct)
add_subdirectory(java_emitter)
add_subdirectory(kotlin_emitter)
add_subdirectory(cli_parser)
add_subdirectory(cil_reconstruct)
add_subdirectory(csharp_emitter)
add_subdirectory(pyc_parser)
add_subdirectory(py_reconstruct)
add_subdirectory(py_emitter)
add_subdirectory(fsharp_emitter)
add_subdirectory(vbnet_emitter)
add_subdirectory(wasm_parser)
add_subdirectory(lua_parser)
add_subdirectory(cxx_backend)
add_subdirectory(dex_parser)
# Qt6 imported targets are not always visible here; gate on the real GUI target.
if(TARGET retdec-gui)
    add_subdirectory(gui)
else()
    message(STATUS "RetDec tests: skipping tests/gui (retdec-gui not built)")
endif()
add_subdirectory(qwen3)
add_subdirectory(serial_detect)
add_subdirectory(concurrency_detect)
add_subdirectory(ptx_decompile)
add_subdirectory(module_cluster)
add_subdirectory(profiling)
add_subdirectory(testing)
add_subdirectory(managed_integration)
